# RustRevEngine

./: Cargo.toml  README.md
resources/models/nanosuit/: glass_dif.revtexture  nanosuit_glass_dif.revtexture
resources/shaders/: shader.fs  shader.vs  vertexlocnormtextanbi.fs  vertexlocsnormtextanbi.vs
src/: main.rs  math.rs  mod.rs  model.rs  rc.rs  rc_internal.rs  shader.rs  types.rs  utils.rs
src/core/: types.rs
src/math/: vec.rs
src/misc/: camera.rs  input.rs
src/render/: mod.rs  model.rs  rc_internal.rs  shader.rs
