[package]
name = "RustRevEngine"
version = "0.1.0"
authors = ["Joakim <Joxxor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.16.1"
gl = "0.10.0"
glfw = "0.23.0"
image = "0.19.0"
tobj = "0.1.6"
num = "0.2.0"
rand = "0.5.5"
#shell added as required by glfw to compile for windows
shell32-sys = "0.1.1"
